# shacl-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  Readme.md
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: gh-pages.yml  publish.yml  release-please.yml  rust.yml
crates/shacl-cli/: CHANGELOG.md  Cargo.toml  Readme.md
crates/shacl-cli/src/: main.rs
crates/shacl-mcp/: CHANGELOG.md  Cargo.toml  Readme.md
crates/shacl-mcp/src/: main.rs
crates/shacl-wasm/: CHANGELOG.md  Cargo.toml  Readme.md
crates/shacl-wasm/npm/: index.d.ts  index.js
crates/shacl-wasm/scripts/: prepare-npm.mjs
crates/shacl-wasm/src/: lib.rs
src/: constraints.rs  err.rs  error.rs  io.rs  lib.rs  main.rs  parser.rs  path.rs  rdf.rs  utils.rs  validation_tree.rs  vocab.rs
src/core/: constraints.rs  mod.rs  path.rs  shape.rs  target.rs
src/parser/: constraint_parser_trait.rs  mod.rs  path.rs  target.rs
src/parser/constraints/: class.rs  datatype.rs  disjoint.rs  equals.rs  has_value.rs  language_in.rs  less_than.rs  less_than_or_equals.rs  max_count.rs  max_exclusive.rs  max_inclusive.rs  max_length.rs  min_count.rs  min_exclusive.rs  min_inclusive.rs  min_length.rs  node_kind.rs  pattern.rs  qualified_value_shape.rs  sh_and.rs  sh_in.rs  sh_node.rs  sh_not.rs  sh_or.rs  sh_xone.rs  sparql.rs  unique_lang.rs
src/validation/: constraint_validator_trait.rs  dataset.rs  mod.rs  report.rs  violation_builder.rs
src/validation/constraints/: class.rs  datatype.rs  disjoint.rs  equals.rs  has_value.rs  language_in.rs  less_than.rs  less_than_or_equals.rs  max_count.rs  max_exclusive.rs  max_inclusive.rs  max_length.rs  min_count.rs  min_exclusive.rs  min_inclusive.rs  min_length.rs  mod.rs  node_kind.rs  pattern.rs  qualified_value_shape.rs  sh_and.rs  sh_in.rs  sh_node.rs  sh_not.rs  sh_or.rs  sh_xone.rs  sparql.rs  unique_lang.rs
src/validation_tree/: core_constraints.rs
src/vocab/: mod.rs  sh.rs
tests/: conformance.rs  path.rs  target.rs
web/: index.html  main.js
