[package]
name = "shacl-rust"
version = "0.1.0"
edition = "2021"
authors = [""]
description = "A SHACL (Shapes Constraint Language) validator for RDF graphs"
license = "MIT"
repository = "https://github.com/ensaremirerol/shacl-rust"
keywords = ["shacl", "rdf", "validation", "semantic-web"]
categories = ["data-structures", "parser-implementations"]

[lib]
name = "shacl_rust"
path = "src/lib.rs"

[[bin]]
name = "shacl-validator"
path = "src/main.rs"

[dependencies]
# RDF handling
oxigraph = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI support
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
