[package]
name = "shacl-rust"
version = "0.1.3"
edition = "2021"
authors = ["Ensar Emir EROL"]
description = "A SHACL (Shapes Constraint Language) validator for RDF graphs"
license = "MIT"
repository = "https://github.com/ensaremirerol/shacl-rust"
keywords = ["shacl", "rdf", "validation", "semantic-web"]
exclude = ["tests/*"]

[workspace]
members = ["crates/shacl-cli", "crates/shacl-wasm", "crates/shacl-mcp"]

[lib]
name = "shacl_rust"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"

# Regular expressions for pattern matching
regex = "1.10"

# SPARQL parser/algebra inspection
spargebra = "0.4.5"
serde_json = "1.0.149"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# RDF handling
oxigraph = { version = "0.5.5", default-features = false, features = [] }

# Parallel processing
rayon = "1.10"

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
# wasm-safe oxigraph build
oxigraph = { version = "0.5.5", default-features = false, features = ["js"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
