[package]
name = "shacl-cli"
version = "0.1.0"
edition = "2021"
authors = [""]
description = "CLI for shacl-rust"
license = "MIT"

[[bin]]
name = "shacl-validator"
path = "src/main.rs"

[dependencies]
shacl-rust = { path = "../.." }

clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
serde_json = "1.0"
oxigraph = "0.5.5"
