[package]
name = "shacl-cli"
version = "0.1.4"
edition = "2021"
authors = ["Ensar Emir EROL"]
description = "Command-line interface for SHACL validation using shacl-rust"
license = "MIT"
repository = "https://github.com/ensaremirerol/shacl-rust"
keywords = ["shacl", "rdf", "validation", "cli"]

[[bin]]
name = "shacl-validator"
path = "src/main.rs"

[dependencies]
shacl-rust = { version = "0.1.4", path = "../.." }

clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
serde_json = "1.0"
oxigraph = "0.5.5"
