[package]
name = "shacl-wasm"
version = "0.1.3"
edition = "2021"
authors = ["Ensar Emir EROL"]
description = "WASM/JS/TS bindings for shacl-rust"
license = "MIT"
repository = "https://github.com/ensaremirerol/shacl-rust"
keywords = ["shacl", "rdf", "wasm", "npm", "typescript"]

[lib]
crate-type = ["cdylib"]

[dependencies]
shacl-rust = { version = "0.1.3", path = "../.." }
serde_json = "1.0"
wasm-bindgen = "0.2"
oxigraph = { version = "0.5.5", default-features = false, features = ["js"] }
